--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -15,7 +15,7 @@
 				ruchetxt, lesHausses, pasdehaussetxt, parcourstxt, ignCarteLiscense,
 				parcoursoptimumtxt, ruchestxt, distancedeparcourstxt, entreetxt, ruchesurl, _csrf_token, dessinEnregistretxt,
 				distRuchesOk, distMaxRuche, geoloc, bootstrap, pasDeGeoLoc, recherchePos, locImpossible, distDiminuee,
-				calculEnCours, pasDAmelioration, dessintxt
+				calculEnCours, pasDAmelioration, dessintxt, enregistrer, ZoomRuches
 				*/
 		/* globals rucherDetail jsPDF */
 		let rucheParcours = /*[[${rucheParcours}]]*/ null;
@@ -54,6 +54,8 @@
 		const calculEnCours = /*[[#{calculEnCours}]]*/ null;
 		const pasDAmelioration = /*[[#{pasDAmelioration}]]*/ null;
 		const dessintxt = /*[[#{dessintxt}]]*/ null;
+		const enregistrer = /*[[#{enregistrer}]]*/ null;
+		const ZoomRuches = /*[[#{ZoomRuches}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => rucherDetail(false));
 	</script>
 	<script th:replace="~{include :: cssol}"></script>
