--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -12,7 +12,7 @@
 		/* exported ol, domtoimage, jsPDF, exportGpx, exportKml,
 				rucheParcours:writable, distParcours:writable, longitudeCentre, latitudeCentre, rayonsButinage, cercles, distButinage, ruches, 
 				rucher, nomHausses, rapprochertxt, pleinecran, lesRuches, couchemarqueursruches, essaimtxt, pasdessaimtxt, 
-				ruchetxt, lesHausses, pasdehaussetxt, parcourstxt, ignCarteLiscense,
+				ruchetxt, lesHausses, pasdehaussetxt, parcourstxt,
 				parcoursoptimumtxt, ruchestxt, distancedeparcourstxt, entreetxt, ruchesurl, _csrf_token, dessinEnregistretxt,
 				distRuchesOk, distMaxRuche, geoloc, bootstrap, pasDeGeoLoc, recherchePos, locImpossible, distDiminuee,
 				calculEnCours, pasDAmelioration, dessintxt, enregistrer, ZoomRuches
