--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -10,15 +10,17 @@
 	<script th:replace="~{include :: jsruchesnom('rucherDetailCarto')}"></script>
 	<script th:replace="~{include :: dom-to-image}"></script>
 	<script th:inline="javascript">
-		/* exported ol, domtoimage, jsPDF, exportGpx, exportKml,
+		/* exported  ignCarteLiscense,
+				ol, domtoimage, jsPDF, exportGpx, exportKml,
 				rucheParcours:writable, distParcours:writable, longitudeCentre, latitudeCentre, rayonsButinage, cercles, distButinage, ruches, 
 				rucher, nomHausses, rapprochertxt, pleinecran, lesRuches, couchemarqueursruches, essaimtxt, pasdessaimtxt, 
-				ruchetxt, lesHausses, pasdehaussetxt, parcourstxt, ignCarteLiscense,
+				ruchetxt, lesHausses, pasdehaussetxt, parcourstxt,
 				parcoursoptimumtxt, ruchestxt, distancedeparcourstxt, entreetxt, ruchesurl, _csrf_token, dessinEnregistretxt,
 				distRuchesOk, distMaxRuche, geoloc, bootstrap, pasDeGeoLoc, recherchePos, locImpossible, distDiminuee,
-				calculEnCours, pasDAmelioration, dessintxtenregistrer, enregistrer, ZoomRuches
+				calculEnCours, pasDAmelioration, dessintxt, enregistrer, ZoomRuches
 				*/
 		/* globals rucherDetail jsPDF */
+		const ignCarteLiscense = /*[[${ignCarteLiscense}]]*/ null;
 		let rucheParcours = /*[[${rucheParcours}]]*/ null;
 		let distParcours = /*[[${distParcours}]]*/ null;
 		const longitudeCentre = /*[[${longitudeCentre}]]*/ null;
@@ -46,7 +48,6 @@
 		const ruchesurl = /*[[@{/}]]*/ null;
 		const _csrf_token = /*[[${_csrf.token}]]*/ null;
 		const dessinEnregistretxt = /*[[#{dessinEnregistre}]]*/ null;
-		const ignCarteLiscense = /*[[${ignCarteLiscense}]]*/ null;
 		const distRuchesOk = /*[[#{distRuchesOk}]]*/ null;
 		const distMaxRuche = /*[[${distMaxRuche}]]*/ null;
 		const pasDeGeoLoc = /*[[#{pasDeGeoLoc}]]*/ null;
