--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -90,8 +90,6 @@
 				&nbsp;
 				<a th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}" class="bi-truck-front"
 					th:title="#{transhumances}" aria-hidden="true"></a>
-				&nbsp; <a th:href="@{'/rucher/poids/'+${rucher.id}}" class="bi-graph-up" th:title="#{courbePoids}"
-					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
@@ -136,9 +134,7 @@
 			</tbody>
 		</table>
 		<h6 th:unless="${#arrays.length(ruches)}" th:text="#{Pasderuche}"></h6>
-
 		<th:block th:if="${#arrays.length(ruches)}">
-
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col">
@@ -151,10 +147,11 @@
 					<div class="col">
 						<a th:href="@{'/rucher/poidsruches/'+${rucher.id}}" class="bi-table" th:title="#{creerPesee}"
 							aria-hidden="true"></a>
+						&nbsp; <a th:href="@{'/rucher/poids/'+${rucher.id}}" class="bi-graph-up"
+							th:title="#{courbePoids}" aria-hidden="true"></a>
 					</div>
 				</div>
 			</div>
-
 			<table class="table table-sm table-bordered table-striped" id="ruches">
 				<thead>
 					<tr>
