--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -205,31 +205,42 @@
 			</tbody>
 		</table>
 		<h6 th:text="#{PasDeRecolte}" th:if="${#lists.isEmpty(poidsListe)}"></h6>
-		<table th:unless="${#lists.isEmpty(poidsListe)}" class="table table-sm table-bordered">
-			<thead>
-				<tr>
-					<th th:text="#{recolte}"></th>
-					<td th:each="recolte : ${recoltesListe}"><a th:href="@{'/recolte/'+${recolte.id}}"
-							th:text="${#temporals.format(recolte.date, 'yyyy/MM/dd')}"></a></td>
-					<th th:text="#{Total}"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<th th:text="#{rucher}"></th>
-					<td th:each="rucher : ${rucherRecolteListe}"><a th:href="@{'/rucher/'+${rucher?.id}}"
-							th:text="${rucher?.nom}"></a>
-					</td>
-					<td></td>
-				</tr>
-				<tr>
-					<th th:text="#{poidskg}"></th>
-					<td th:each="poids : ${poidsListe}" th:text="${#numbers.formatDecimal(poids/1000.0,1,2,'DEFAULT')}">
-					</td>
-					<td th:text="${#numbers.formatDecimal(poidsTotal/1000.0,1,2,'DEFAULT')}"></td>
-				</tr>
-			</tbody>
-		</table>
+		<th:block th:unless="${#lists.isEmpty(poidsListe)}">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col">
+						<h6 class="item" th:text="#{nbXRecoltes(${#arrays.length(recoltesListe)})}">
+						</h6>
+
+					</div>
+				</div>
+			</div>
+			<table class="table table-sm table-bordered">
+				<thead>
+					<tr>
+						<th th:text="#{recolte}"></th>
+						<td th:each="recolte : ${recoltesListe}"><a th:href="@{'/recolte/'+${recolte.id}}"
+								th:text="${#temporals.format(recolte.date, 'yyyy/MM/dd')}"></a></td>
+						<th th:text="#{Total}"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th th:text="#{rucher}"></th>
+						<td th:each="rucher : ${rucherRecolteListe}"><a th:href="@{'/rucher/'+${rucher?.id}}"
+								th:text="${rucher?.nom}"></a>
+						</td>
+						<td></td>
+					</tr>
+					<tr>
+						<th th:text="#{poidskg}"></th>
+						<td th:each="poids : ${poidsListe}"
+							th:text="${#numbers.formatDecimal(poids/1000.0,1,2,'DEFAULT')}">
+						</td>
+						<td th:text="${#numbers.formatDecimal(poidsTotal/1000.0,1,2,'DEFAULT')}"></td>
+					</tr>
+				</tbody>
+			</table>
 	</div>
 	<br />
 	<footer th:replace="~{include::footer}"></footer>
