--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -185,15 +185,7 @@
 		</th:block>
 		<h6 th:text="#{PasDeRecolte}" th:if="${#lists.isEmpty(recoltesListe)}"></h6>
 		<th:block th:unless="${#lists.isEmpty(poidsListe)}">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col">
-						<h6 class="item" th:text="#{nbXRecoltes(${#arrays.length(recoltesListe)})}">
-						</h6>
-
-					</div>
-				</div>
-			</div>
+			<h6 class="item" th:text="#{nbXRecoltes(${#arrays.length(recoltesListe)})}"></h6>
 			<table class="table table-sm table-bordered">
 				<thead>
 					<tr>
