Suppression rucher, améliorations java, double confiramation si eves

--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -34,7 +34,7 @@
 				} else if (ruches.length) {
 					alert(rucherNSRuches);
 				} else if (evenements) {
-					if (confirm(suppRucherEtEve)) {
+					if (confirm(suppRucherEtEve) && confirm(suppRucherEtEve + ' ! ! ! !')) {
 						return;
 					}
 				} else if (confirm(suppCeRucher)) {
