--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -9,7 +9,7 @@
 	<script th:inline="javascript">
 		/* exported
 		_csrf_token, _csrf_param_name, suppRecHauss, dateRecEpoch
-		enlevHRecDe30, urlRecHDepot, recId, total, DataTable
+		enlevHRecDe30, urlRecHDepot, recId, total, pasDeHausses, pasDeHaussesTxt, DataTable
 		*/
 		const _csrf_token = /*[[${_csrf.token}]]*/null;
 		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
@@ -19,6 +19,10 @@
 		const urlRecHDepot = /*[[@{/recolte/haussesDepot/}]]*/null;
 		const recId = /*[[${recolte.id}]]*/null;
 		const total = /*[[#{Total}]]*/null;
+
+		const pasDeHausses = /*[[${#lists.isEmpty(detailsRecolte)}]]*/null;
+		const pasDeHaussesTxt = /*[[#{pasDeHaussesTxt}]]*/null;
+
 	</script>
 </head>
 
@@ -38,13 +42,14 @@
 			<div class="col">
 				<a th:href="@{'/recolte/modifie/'+${recolte.id}}" class="bi-pencil" th:title="#{modifier}"
 					aria-hidden="true"></a> &nbsp; <a th:href="@{'/recolte/choixHausses/'+${recolte.id}}"
-					class="bi-justify" th:title="#{choixHausesRecolte}" aria-hidden="true"></a> <a
-					th:href="@{'/recolte/haussesMiel/'+${recolte.id}}" class="bi-table" th:title="#{SaisiePoidsMiel}"
-					aria-hidden="true"></a> <span id="enlevehausses" class="bi-reply-all cursorpointer"
-					th:title="#{recolteHausseDepot}" aria-hidden="true"></span> <a
-					th:href="@{'/recolte/statistiques/essaim/'+${recolte.id}}" class="bi-pie-chart"
-					th:title="#{statistiquesessaims}" aria-hidden="true"></a> <a id="supprime"
-					th:href="@{'/recolte/supprime/'+${recolte.id}}" class="bi-trash" style="color: red"
+					class="bi-justify" th:title="#{choixHausesRecolte}" aria-hidden="true"></a>
+				<a id="haussesMiel" th:href="@{'/recolte/haussesMiel/'+${recolte.id}}" class="bi-table"
+					th:title="#{SaisiePoidsMiel}" aria-hidden="true"></a>
+				<span id="enlevehausses" class="bi-reply-all cursorpointer" th:title="#{recolteHausseDepot}"
+					aria-hidden="true"></span>
+				<a th:href="@{'/recolte/statistiques/essaim/'+${recolte.id}}" class="bi-pie-chart"
+					th:title="#{statistiquesessaims}" aria-hidden="true"></a>
+				<a id="supprime" th:href="@{'/recolte/supprime/'+${recolte.id}}" class="bi-trash" style="color: red"
 					th:title="#{supprimer}" aria-hidden="true"></a>
 				<input type="text" id="date" name="date">
 				<button id="dateOK" th:text="#{Retirerhausses}"></button>
