--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -51,19 +51,19 @@
 		<button type="button" id="toggleplus" th:text="#{plus}"></button>
 		<br /><br />
 		<div class="form-floating mb-3 toggleplus">
-			<select class="form-control" th:field="*{essaim}">
+			<select class="form-control" th:field="*{essaim}" disabled>
 				<option th:value="*{essaim?.id}" th:text="*{essaim?.nom}"></option>
 			</select>
 			<label class="form-label" for="essaim" th:text="#{essaim}"></label>
 		</div>
 		<div class="form-floating mb-3 toggleplus">
-			<select class="form-control" th:field="*{ruche}">
+			<select class="form-control" th:field="*{ruche}" disabled>
 				<option th:value="*{ruche?.id}" th:text="*{ruche?.nom}"></option>
 			</select>
 			<label class="form-label" for="ruche" th:text="#{ruche}"></label>
 		</div>
 		<div class="form-floating mb-3 toggleplus">
-			<select class="form-control" th:field="*{rucher}">
+			<select class="form-control" th:field="*{rucher}" disabled>
 				<option th:value="*{rucher?.id}" th:text="*{rucher?.nom}"></option>
 			</select>
 			<label class="form-label" for="rucher" th:text="#{rucher}"></label>
