--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -75,8 +75,9 @@
 				</tr>
 			</tbody>
 		</table>
-		<table class="table table-sm table-bordered"
-			th:if="${(eveHausse != null) or (eveRucher != null) or (eveRuche != null)}">
+		<h6 th:unless="${hausse.ruche}" th:text="#{haussePasRuche}"></h6>
+		<table class="table table-sm table-bordered" 
+			th:if="${(hausse.ruche != null) or (eveHausse != null) or (eveRucher != null) or (eveRuche != null)}">
 			<thead>
 				<tr>
 					<th th:text="#{ruche}"></th>
@@ -108,6 +109,8 @@
 				</tr>
 			</tbody>
 		</table>
+		
+		
 		<th:block th:if="${(eveRempl != null) or (eveComm != null)}">
 			<h6 th:text="#{derniersEve}"></h6>
 			<table class="table table-sm table-bordered">
