--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -80,7 +80,7 @@
 
 <script th:fragment="jsChart" th:src="@{/js/chart.umd.min-4.4.0.js}"></script>
 
-<script th:fragment="luxon" th:src="@{/js/luxon-3.4.3.js}"></script>
+<script th:fragment="luxon" th:src="@{/js/luxon.min-3.4.4.js}"></script>
 <script th:fragment="chartjs-adapter" th:src="@{/js/chartjs-adapter-luxon-1.3.1.js}"></script>
 
 <link th:fragment="weather-icons" rel="stylesheet" type="text/css" media="all"
