EssaimRepository dispersion, IdNom sur select au lieu de Object[]

--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -108,8 +108,8 @@
 			<div class="form-floating mb-3">
 				<select class="form-control" id="remerageId" name="remerageId">
 					<option th:text="#{aucun}" value=""></option>
-					<option th:each="essaimopt : ${essaimsRemerage}" th:value="${essaimopt[0]}"
-						th:text="${essaimopt[1]}"></option>
+					<option th:each="essaimopt : ${essaimsRemerage}" th:value="${essaimopt.id}"
+						th:text="${essaimopt.nom}"></option>
 				</select> <label class="form-label" for="remerageId"
 					th:text="#{nouvellereine} + ' ' + ${nomRuche}"></label>
 			</div>
