essaim statistiques note écart standardisé par rapport à la moyenne. doc

--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -83,6 +83,7 @@
 					<th th:text="#{Min}"></th>
 					<th th:if="${rucherId == null}" th:text="#{Moyen}"></th>
 					<th th:text="#{Note}"></th>
+					<th th:text="#{NbRecolte}"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -95,10 +96,8 @@
 					<td th:text="${essaimPoids.pMax}"></td>
 					<td th:text="${essaimPoids.pMin}"></td>
 					<td th:if="${rucherId == null}" th:text="${essaimPoids.pMoyen}"></td>
-					
 					<td th:text="${essaimPoids.note}"></td>
-					
-					
+					<td th:text="${essaimPoids.nbrec}"></td>
 				</tr>
 			</tbody>
 		</table>
