--- a/src/main/resources/templates/recolte/recolteStat.html
+++ b/src/main/resources/templates/recolte/recolteStat.html
@@ -2,6 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+			new DataTable('#essaims', {
+				dom: 'Blftip',
+				scrollX: true,
+			});
+		});
+	</script>
 </head>
 
 <body>
@@ -27,8 +35,8 @@
 				<tr>
 					<th th:text="#{rucher}"></th>
 					<th th:text="#{poidsMielHausses}"></th>
-					<th th:text="#{Moyenne}"></th>
-					<th th:text="#{EcartType}"></th>
+					<th th:text="#{MoyenneE}"></th>
+					<th th:text="#{EcartTypeE}"></th>
 					<th th:text="#{nbEssaims}"></th>
 				</tr>
 			</thead>
@@ -41,11 +49,31 @@
 					<td class="num" th:text="${#numbers.formatDecimal(avgRec[i.index],1,2)}"></td>
 					<td class="num" th:text="${#numbers.formatDecimal(stdRec[i.index],1,2)}"></td>
 					<td class="num" th:text="${countEssaimsRec[i.index]}"></td>
-					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
+
+	<div class="container-fluid table-responsive" id="essaims">
+		<table class="table table-sm table-bordered">
+			<thead>
+				<tr>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="idNom, i : ${essaims}">
+					<td>
+						<a th:href="@{'/esssaim/'+${idNom.id}}" th:text="${idNom.nom}"></a>
+					</td>
+					<td th:text="${ruchersX[i.index].nom}"></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+
 	<footer th:replace="~{include::footer}"></footer>
 </body>
 
