recolteStat.html tri tableau rucher, titre...

--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -55,7 +55,7 @@
 				<a th:href="@{'/recolte/statistiques/'+${recolte.id}}" class="bi-pie-chart"
 					th:title="#{statistiquesessaims}" aria-hidden="true"></a>
 				<a id="statistiques" th:href="@{'/recolte/stat/'+${recolte.id}}" class="bi-table"
-					th:title="#{Statistiques}" aria-hidden="true"></a>
+					th:title="#{statistiquesproduction}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
