stat tests pour éviter divisions par 0, doc, icone

--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -43,7 +43,7 @@
 				<a th:href="@{'/recolte/modifie/'+${recolte.id}}" class="bi-pencil" th:title="#{modifier}"
 					aria-hidden="true"></a> &nbsp; <a th:href="@{'/recolte/choixHausses/'+${recolte.id}}"
 					class="bi-justify" th:title="#{choixHausesRecolte}" aria-hidden="true"></a>
-				<a id="haussesMiel" th:href="@{'/recolte/haussesMiel/'+${recolte.id}}" class="bi-table"
+				<a id="haussesMiel" th:href="@{'/recolte/haussesMiel/'+${recolte.id}}" class="bi-grid-3x2-gap"
 					th:title="#{SaisiePoidsMiel}" aria-hidden="true"></a>
 				<span id="enlevehausses" class="bi-reply-all cursorpointer" th:title="#{recolteHausseDepot}"
 					aria-hidden="true"></span>
