--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -45,6 +45,8 @@
 			<div class="col">
 				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
 					role="button" th:attr="data-bs-content=#{aideStatistiqueEssaim}"></a>
+				<a th:href="@{#{urldoc}+'1084_1613789997'}" class="bi-book" th:title="#{Doc}" target="_blank"
+					aria-hidden="true"></a>	
 			</div>
 		</div>
 	</div>
