--- a/src/main/resources/templates/recolte/recolteStat.html
+++ b/src/main/resources/templates/recolte/recolteStat.html
@@ -34,9 +34,13 @@
 						th:text="#{recolte} + ' ' + ${#temporals.format(recolte.date, 'yy/MM/dd HH:mm')}"></a>
 				</h1>
 			</div>
+			<div class="col">
+				<a th:href="@{#{urldoc}+'13359_3141829358'}" class="bi-book" th:title="#{Doc}" target="_blank"
+					aria-hidden="true"></a>
+			</div>
+			
 		</div>
 	</div>
-
 	<div class="container-fluid table-responsive">
 		<table class="table table-sm table-bordered" id="ruchers">
 			<thead>
