--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col">
 				<select class="form-control" id="rucher" name="rucher">
-					<option value="" th:text="#{tous}"></option>
+					<option value="" th:text="#{TousRuchers}"></option>
 					<option th:each="rucheropt : ${ruchersNoms}" th:value="${rucheropt}" th:text="${rucheropt}">
 					</option>
 				</select>
